add csv headers

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<thead>
 					<tr>
 						<th scope="col">URL</th>
-						<th scope="col">Ancor</th>
+						<th scope="col">Anchor</th>
 						<th scope="col">Rel</th>
 					</tr>
 				</thead>
