--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>hello</h1>
+		<h1>Extract links from HTML</h1>
 		<div class="card">
 			<div class="card-body">
 				<div class="form-group">
